--- a/composer.json
+++ b/composer.json
@@ -6,12 +6,13 @@
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
+        "embed/embed": "^4.4",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
-        "robinvdvleuten/ulid": "^5.0",
-        "league/commonmark": "^2.3.7"
+        "league/commonmark": "^2.3.7",
+        "robinvdvleuten/ulid": "^5.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
