--- a/.env.dev
+++ b/.env.dev
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=sqlite
 DB_HOST=
 DB_PORT=
-DB_DATABASE=test.sqlite
+DB_DATABASE=./database/test.sqlite
 DB_USERNAME=
 DB_PASSWORD=
 
